@@ -9,7 +9,7 @@
 \newcommand{\s}{\ifelse{latex}{\eqn{_{#1}}}{\ifelse{html}{\out{<sub>#1</sub>}}{#1}}}
 \newcommand{\S}{\ifelse{latex}{\eqn{^{#1}}}{\ifelse{html}{\out{<sup>#1</sup>}}{^#1}}}
 
-\section{Changes in CHNOSZ version 1.3.6-51 (2020-07-25)}{
+\section{Changes in CHNOSZ version 1.3.6-52 (2020-07-25)}{
 
   \subsection{MAJOR CHANGES}{
     \itemize{
@@ -174,6 +174,9 @@
       predominant species at each grid point. This can be used as shown in the
       \code{multi-metal.Rmd} vignette to compute the Pourbaix energy
       (Δ\emph{G}\s{pbx}) for a metastable material.
+
+      \item Remove the \samp{lty.aq} and \samp{lty.cr} arguments from
+      \code{diagram()}.
 
     }
   }
